// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button should render variant inverted 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 5px;
  background: transparent;
  cursor: pointer;
  border: 1px solid #FBFBFB;
  background-color: #FBFBFB;
  color: #000000;
  padding: 15px 20px;
}

.c0:hover {
  background-color: transparent;
  color: #FBFBFB;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

<body>
  <div>
    <button
      class="c0"
    >
      Click me
    </button>
  </div>
</body>
`;

exports[`Button should render variant label as active 1`] = `
.c0 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 0.25rem;
  flex: 0 0 auto;
  min-height: 1.75rem;
  background: transparent;
  border: 1px solid #98DFD6;
  padding: 0.375rem 0.75rem;
  font-family: inherit;
  font-size: 0.65rem;
  line-height: 1;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  cursor: pointer;
  color: #98DFD6;
  opacity: 1;
  white-space: nowrap;
  transition: opacity 0.15s,border-color 0.15s,color 0.15s,background 0.15s;
}

.c0:hover {
  opacity: 1;
  color: #98DFD6;
  border-color: rgba(152,223,214,0.45);
}

.c0:disabled {
  opacity: 0.2;
  cursor: not-allowed;
}

.c0:focus-visible {
  outline: #FBFBFB auto 1px;
}

<body>
  <div>
    <button
      class="c0"
    >
      Published
    </button>
  </div>
</body>
`;

exports[`Button should render variant label as not active 1`] = `
.c0 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 0.25rem;
  flex: 0 0 auto;
  min-height: 1.75rem;
  background: transparent;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-family: inherit;
  font-size: 0.65rem;
  line-height: 1;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  cursor: pointer;
  color: #FBFBFB;
  opacity: 0.45;
  white-space: nowrap;
  transition: opacity 0.15s,border-color 0.15s,color 0.15s,background 0.15s;
}

.c0:hover {
  opacity: 1;
  color: #98DFD6;
  border-color: rgba(152,223,214,0.45);
}

.c0:disabled {
  opacity: 0.2;
  cursor: not-allowed;
}

.c0:focus-visible {
  outline: #FBFBFB auto 1px;
}

<body>
  <div>
    <button
      class="c0"
    >
      Published
    </button>
  </div>
</body>
`;
